--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
 
+<html>
+  <title>
+    Athena Vieira Portfolio
+  <title>
+    <body>
+      Introduction:
+    <body>
+    <style>
+      body{
+      background color:gray;
+      color:#fff;
+      text-align:center; 
+      }
+      
+    <style>
+<html>    
